[package]
name = "inth-oauth2-azure"
description = "Azure Active Directory (OpenID Connect) support for the inth-oauth2 crate"
version = "0.1.0"
authors = ["Cameron Daniel <cam.daniel@gmail.com>"]
repository = "https://github.com/ccakes/inth-oauth2-azure"
readme = "README.md"
license = "Unlicense"

[dependencies]
inth-oauth2 = "0.16"
url = "1.7"
lazy_static = "1.2"